parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PUBLIC CLASS NAME { main_body }
Rule 2     start -> PRIVATE CLASS NAME { main_body }
Rule 3     start -> PROTECTED CLASS NAME { main_body }
Rule 4     start -> CLASS NAME { main_body }
Rule 5     start -> main_body
Rule 6     main_body -> PUBLIC STATIC VOID MAIN ( STRING ARGS ) { body }
Rule 7     main_body -> body
Rule 8     body -> statements
Rule 9     statements -> statements statement
Rule 10    statements -> <empty>
Rule 11    statement -> DO { statements } WHILE ( expression ) ;
Rule 12    else_if -> ELSE IF ( expression ) { statements } else_if
Rule 13    else_if -> ELSE IF ( expression ) statement else_if
Rule 14    else_if -> ELSE { statements }
Rule 15    else_if -> ELSE statement
Rule 16    else_if -> <empty>
Rule 17    statement -> IF ( expression ) { statements } else_if
Rule 18    statement -> IF ( expression ) statement else_if
Rule 19    statement -> INT NAME ;
Rule 20    statement -> FLOAT NAME ;
Rule 21    statement -> BOOLEAN NAME ;
Rule 22    statement -> NAME = expression ;
Rule 23    statement -> INT NAME = expression ;
Rule 24    statement -> FLOAT NAME = expression ;
Rule 25    statement -> BOOLEAN NAME = TRUE ;
Rule 26    statement -> BOOLEAN NAME = FALSE ;
Rule 27    statement -> expression ;
Rule 28    expression -> TRUE
Rule 29    expression -> FALSE
Rule 30    expression -> expression + expression
Rule 31    expression -> expression - expression
Rule 32    expression -> expression * expression
Rule 33    expression -> expression / expression
Rule 34    expression -> expression > expression
Rule 35    expression -> expression < expression
Rule 36    expression -> expression REL_EQ expression
Rule 37    expression -> expression REL_NEQ expression
Rule 38    expression -> expression REL_GTEQ expression
Rule 39    expression -> expression REL_LTEQ expression
Rule 40    statement -> NAME MINEQ expression ;
Rule 41    statement -> NAME PLUSEQ expression ;
Rule 42    statement -> NAME DIVEQ expression ;
Rule 43    statement -> NAME MULEQ expression ;
Rule 44    expression -> ! expression
Rule 45    expression -> - expression
Rule 46    expression -> ( expression )
Rule 47    expression -> NUMBER
Rule 48    expression -> NAME

Terminals, with rules where they appear

!                    : 44
(                    : 6 11 12 13 17 18 46
)                    : 6 11 12 13 17 18 46
*                    : 32
+                    : 30
-                    : 31 45
/                    : 33
;                    : 11 19 20 21 22 23 24 25 26 27 40 41 42 43
<                    : 35
=                    : 22 23 24 25 26
>                    : 34
ARGS                 : 6
BOOLEAN              : 21 25 26
CLASS                : 1 2 3 4
DIVEQ                : 42
DO                   : 11
ELSE                 : 12 13 14 15
FALSE                : 26 29
FLOAT                : 20 24
IF                   : 12 13 17 18
INT                  : 19 23
MAIN                 : 6
MINEQ                : 40
MULEQ                : 43
NAME                 : 1 2 3 4 19 20 21 22 23 24 25 26 40 41 42 43 48
NUMBER               : 47
PLUSEQ               : 41
PRIVATE              : 2
PROTECTED            : 3
PUBLIC               : 1 6
REL_EQ               : 36
REL_GTEQ             : 38
REL_LTEQ             : 39
REL_NEQ              : 37
STATIC               : 6
STRING               : 6
TRUE                 : 25 28
VOID                 : 6
WHILE                : 11
error                : 
{                    : 1 2 3 4 6 11 12 14 17
}                    : 1 2 3 4 6 11 12 14 17

Nonterminals, with rules where they appear

body                 : 6 7
else_if              : 12 13 17 18
expression           : 11 12 13 17 18 22 23 24 27 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 44 45 46
main_body            : 1 2 3 4 5
start                : 0
statement            : 9 13 15 18
statements           : 8 9 11 12 14 17

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PUBLIC CLASS NAME { main_body }
    (2) start -> . PRIVATE CLASS NAME { main_body }
    (3) start -> . PROTECTED CLASS NAME { main_body }
    (4) start -> . CLASS NAME { main_body }
    (5) start -> . main_body
    (6) main_body -> . PUBLIC STATIC VOID MAIN ( STRING ARGS ) { body }
    (7) main_body -> . body
    (8) body -> . statements
    (9) statements -> . statements statement
    (10) statements -> .

    PUBLIC          shift and go to state 2
    PRIVATE         shift and go to state 5
    PROTECTED       shift and go to state 8
    CLASS           shift and go to state 6
    DO              reduce using rule 10 (statements -> .)
    IF              reduce using rule 10 (statements -> .)
    INT             reduce using rule 10 (statements -> .)
    FLOAT           reduce using rule 10 (statements -> .)
    BOOLEAN         reduce using rule 10 (statements -> .)
    NAME            reduce using rule 10 (statements -> .)
    TRUE            reduce using rule 10 (statements -> .)
    FALSE           reduce using rule 10 (statements -> .)
    !               reduce using rule 10 (statements -> .)
    -               reduce using rule 10 (statements -> .)
    (               reduce using rule 10 (statements -> .)
    NUMBER          reduce using rule 10 (statements -> .)
    $end            reduce using rule 10 (statements -> .)

    body                           shift and go to state 7
    statements                     shift and go to state 1
    main_body                      shift and go to state 3
    start                          shift and go to state 4

state 1

    (8) body -> statements .
    (9) statements -> statements . statement
    (11) statement -> . DO { statements } WHILE ( expression ) ;
    (17) statement -> . IF ( expression ) { statements } else_if
    (18) statement -> . IF ( expression ) statement else_if
    (19) statement -> . INT NAME ;
    (20) statement -> . FLOAT NAME ;
    (21) statement -> . BOOLEAN NAME ;
    (22) statement -> . NAME = expression ;
    (23) statement -> . INT NAME = expression ;
    (24) statement -> . FLOAT NAME = expression ;
    (25) statement -> . BOOLEAN NAME = TRUE ;
    (26) statement -> . BOOLEAN NAME = FALSE ;
    (27) statement -> . expression ;
    (40) statement -> . NAME MINEQ expression ;
    (41) statement -> . NAME PLUSEQ expression ;
    (42) statement -> . NAME DIVEQ expression ;
    (43) statement -> . NAME MULEQ expression ;
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    }               reduce using rule 8 (body -> statements .)
    $end            reduce using rule 8 (body -> statements .)
    DO              shift and go to state 22
    IF              shift and go to state 21
    INT             shift and go to state 9
    FLOAT           shift and go to state 15
    BOOLEAN         shift and go to state 13
    NAME            shift and go to state 18
    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16

    expression                     shift and go to state 14
    statement                      shift and go to state 10

state 2

    (1) start -> PUBLIC . CLASS NAME { main_body }
    (6) main_body -> PUBLIC . STATIC VOID MAIN ( STRING ARGS ) { body }

    CLASS           shift and go to state 24
    STATIC          shift and go to state 23


state 3

    (5) start -> main_body .

    $end            reduce using rule 5 (start -> main_body .)


state 4

    (0) S' -> start .



state 5

    (2) start -> PRIVATE . CLASS NAME { main_body }

    CLASS           shift and go to state 25


state 6

    (4) start -> CLASS . NAME { main_body }

    NAME            shift and go to state 26


state 7

    (7) main_body -> body .

    }               reduce using rule 7 (main_body -> body .)
    $end            reduce using rule 7 (main_body -> body .)


state 8

    (3) start -> PROTECTED . CLASS NAME { main_body }

    CLASS           shift and go to state 27


state 9

    (19) statement -> INT . NAME ;
    (23) statement -> INT . NAME = expression ;

    NAME            shift and go to state 28


state 10

    (9) statements -> statements statement .

    DO              reduce using rule 9 (statements -> statements statement .)
    IF              reduce using rule 9 (statements -> statements statement .)
    INT             reduce using rule 9 (statements -> statements statement .)
    FLOAT           reduce using rule 9 (statements -> statements statement .)
    BOOLEAN         reduce using rule 9 (statements -> statements statement .)
    NAME            reduce using rule 9 (statements -> statements statement .)
    TRUE            reduce using rule 9 (statements -> statements statement .)
    FALSE           reduce using rule 9 (statements -> statements statement .)
    !               reduce using rule 9 (statements -> statements statement .)
    -               reduce using rule 9 (statements -> statements statement .)
    (               reduce using rule 9 (statements -> statements statement .)
    NUMBER          reduce using rule 9 (statements -> statements statement .)
    }               reduce using rule 9 (statements -> statements statement .)
    $end            reduce using rule 9 (statements -> statements statement .)


state 11

    (45) expression -> - . expression
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 29

state 12

    (29) expression -> FALSE .

    ;               reduce using rule 29 (expression -> FALSE .)
    +               reduce using rule 29 (expression -> FALSE .)
    -               reduce using rule 29 (expression -> FALSE .)
    *               reduce using rule 29 (expression -> FALSE .)
    /               reduce using rule 29 (expression -> FALSE .)
    >               reduce using rule 29 (expression -> FALSE .)
    <               reduce using rule 29 (expression -> FALSE .)
    REL_EQ          reduce using rule 29 (expression -> FALSE .)
    REL_NEQ         reduce using rule 29 (expression -> FALSE .)
    REL_GTEQ        reduce using rule 29 (expression -> FALSE .)
    REL_LTEQ        reduce using rule 29 (expression -> FALSE .)
    )               reduce using rule 29 (expression -> FALSE .)


state 13

    (21) statement -> BOOLEAN . NAME ;
    (25) statement -> BOOLEAN . NAME = TRUE ;
    (26) statement -> BOOLEAN . NAME = FALSE ;

    NAME            shift and go to state 31


state 14

    (27) statement -> expression . ;
    (30) expression -> expression . + expression
    (31) expression -> expression . - expression
    (32) expression -> expression . * expression
    (33) expression -> expression . / expression
    (34) expression -> expression . > expression
    (35) expression -> expression . < expression
    (36) expression -> expression . REL_EQ expression
    (37) expression -> expression . REL_NEQ expression
    (38) expression -> expression . REL_GTEQ expression
    (39) expression -> expression . REL_LTEQ expression

    ;               shift and go to state 40
    +               shift and go to state 41
    -               shift and go to state 37
    *               shift and go to state 32
    /               shift and go to state 39
    >               shift and go to state 35
    <               shift and go to state 38
    REL_EQ          shift and go to state 34
    REL_NEQ         shift and go to state 36
    REL_GTEQ        shift and go to state 33
    REL_LTEQ        shift and go to state 42


state 15

    (20) statement -> FLOAT . NAME ;
    (24) statement -> FLOAT . NAME = expression ;

    NAME            shift and go to state 43


state 16

    (47) expression -> NUMBER .

    ;               reduce using rule 47 (expression -> NUMBER .)
    +               reduce using rule 47 (expression -> NUMBER .)
    -               reduce using rule 47 (expression -> NUMBER .)
    *               reduce using rule 47 (expression -> NUMBER .)
    /               reduce using rule 47 (expression -> NUMBER .)
    >               reduce using rule 47 (expression -> NUMBER .)
    <               reduce using rule 47 (expression -> NUMBER .)
    REL_EQ          reduce using rule 47 (expression -> NUMBER .)
    REL_NEQ         reduce using rule 47 (expression -> NUMBER .)
    REL_GTEQ        reduce using rule 47 (expression -> NUMBER .)
    REL_LTEQ        reduce using rule 47 (expression -> NUMBER .)
    )               reduce using rule 47 (expression -> NUMBER .)


state 17

    (44) expression -> ! . expression
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 44

state 18

    (22) statement -> NAME . = expression ;
    (40) statement -> NAME . MINEQ expression ;
    (41) statement -> NAME . PLUSEQ expression ;
    (42) statement -> NAME . DIVEQ expression ;
    (43) statement -> NAME . MULEQ expression ;
    (48) expression -> NAME .

    =               shift and go to state 48
    MINEQ           shift and go to state 45
    PLUSEQ          shift and go to state 47
    DIVEQ           shift and go to state 49
    MULEQ           shift and go to state 46
    ;               reduce using rule 48 (expression -> NAME .)
    +               reduce using rule 48 (expression -> NAME .)
    -               reduce using rule 48 (expression -> NAME .)
    *               reduce using rule 48 (expression -> NAME .)
    /               reduce using rule 48 (expression -> NAME .)
    >               reduce using rule 48 (expression -> NAME .)
    <               reduce using rule 48 (expression -> NAME .)
    REL_EQ          reduce using rule 48 (expression -> NAME .)
    REL_NEQ         reduce using rule 48 (expression -> NAME .)
    REL_GTEQ        reduce using rule 48 (expression -> NAME .)
    REL_LTEQ        reduce using rule 48 (expression -> NAME .)


state 19

    (46) expression -> ( . expression )
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 50

state 20

    (28) expression -> TRUE .

    ;               reduce using rule 28 (expression -> TRUE .)
    +               reduce using rule 28 (expression -> TRUE .)
    -               reduce using rule 28 (expression -> TRUE .)
    *               reduce using rule 28 (expression -> TRUE .)
    /               reduce using rule 28 (expression -> TRUE .)
    >               reduce using rule 28 (expression -> TRUE .)
    <               reduce using rule 28 (expression -> TRUE .)
    REL_EQ          reduce using rule 28 (expression -> TRUE .)
    REL_NEQ         reduce using rule 28 (expression -> TRUE .)
    REL_GTEQ        reduce using rule 28 (expression -> TRUE .)
    REL_LTEQ        reduce using rule 28 (expression -> TRUE .)
    )               reduce using rule 28 (expression -> TRUE .)


state 21

    (17) statement -> IF . ( expression ) { statements } else_if
    (18) statement -> IF . ( expression ) statement else_if

    (               shift and go to state 51


state 22

    (11) statement -> DO . { statements } WHILE ( expression ) ;

    {               shift and go to state 52


state 23

    (6) main_body -> PUBLIC STATIC . VOID MAIN ( STRING ARGS ) { body }

    VOID            shift and go to state 53


state 24

    (1) start -> PUBLIC CLASS . NAME { main_body }

    NAME            shift and go to state 54


state 25

    (2) start -> PRIVATE CLASS . NAME { main_body }

    NAME            shift and go to state 55


state 26

    (4) start -> CLASS NAME . { main_body }

    {               shift and go to state 56


state 27

    (3) start -> PROTECTED CLASS . NAME { main_body }

    NAME            shift and go to state 57


state 28

    (19) statement -> INT NAME . ;
    (23) statement -> INT NAME . = expression ;

    ;               shift and go to state 59
    =               shift and go to state 58


state 29

    (45) expression -> - expression .
    (30) expression -> expression . + expression
    (31) expression -> expression . - expression
    (32) expression -> expression . * expression
    (33) expression -> expression . / expression
    (34) expression -> expression . > expression
    (35) expression -> expression . < expression
    (36) expression -> expression . REL_EQ expression
    (37) expression -> expression . REL_NEQ expression
    (38) expression -> expression . REL_GTEQ expression
    (39) expression -> expression . REL_LTEQ expression

    ;               reduce using rule 45 (expression -> - expression .)
    +               reduce using rule 45 (expression -> - expression .)
    -               reduce using rule 45 (expression -> - expression .)
    *               reduce using rule 45 (expression -> - expression .)
    /               reduce using rule 45 (expression -> - expression .)
    >               reduce using rule 45 (expression -> - expression .)
    <               reduce using rule 45 (expression -> - expression .)
    REL_EQ          reduce using rule 45 (expression -> - expression .)
    REL_NEQ         reduce using rule 45 (expression -> - expression .)
    REL_GTEQ        reduce using rule 45 (expression -> - expression .)
    REL_LTEQ        reduce using rule 45 (expression -> - expression .)
    )               reduce using rule 45 (expression -> - expression .)

  ! +               [ shift and go to state 41 ]
  ! -               [ shift and go to state 37 ]
  ! *               [ shift and go to state 32 ]
  ! /               [ shift and go to state 39 ]
  ! >               [ shift and go to state 35 ]
  ! <               [ shift and go to state 38 ]
  ! REL_EQ          [ shift and go to state 34 ]
  ! REL_NEQ         [ shift and go to state 36 ]
  ! REL_GTEQ        [ shift and go to state 33 ]
  ! REL_LTEQ        [ shift and go to state 42 ]


state 30

    (48) expression -> NAME .

    )               reduce using rule 48 (expression -> NAME .)
    +               reduce using rule 48 (expression -> NAME .)
    -               reduce using rule 48 (expression -> NAME .)
    *               reduce using rule 48 (expression -> NAME .)
    /               reduce using rule 48 (expression -> NAME .)
    >               reduce using rule 48 (expression -> NAME .)
    <               reduce using rule 48 (expression -> NAME .)
    REL_EQ          reduce using rule 48 (expression -> NAME .)
    REL_NEQ         reduce using rule 48 (expression -> NAME .)
    REL_GTEQ        reduce using rule 48 (expression -> NAME .)
    REL_LTEQ        reduce using rule 48 (expression -> NAME .)
    ;               reduce using rule 48 (expression -> NAME .)


state 31

    (21) statement -> BOOLEAN NAME . ;
    (25) statement -> BOOLEAN NAME . = TRUE ;
    (26) statement -> BOOLEAN NAME . = FALSE ;

    ;               shift and go to state 60
    =               shift and go to state 61


state 32

    (32) expression -> expression * . expression
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 62

state 33

    (38) expression -> expression REL_GTEQ . expression
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 63

state 34

    (36) expression -> expression REL_EQ . expression
    (28) expression -> . TRUE
    (29) expression -> . FALSE
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression > expression
    (35) expression -> . expression < expression
    (36) expression -> . expression REL_EQ expression
    (37) expression -> . expression REL_NEQ expression
    (38) expression -> . expression REL_GTEQ expression
    (39) expression -> . expression REL_LTEQ expression
    (44) expression -> . ! expression
    (45) expression -> . - expression
    (46) expression -> . ( expression )
    (47) expression -> . NUMBER
    (48) expression -> . NAME

    TRUE            shift and go to state 20
    FALSE           shift and go to state 12
    !               shift and go to state 17
    -               shift and go to state 11
    (               shift and go to state 19
    NUMBER          shift and go to state 16
    NAME            shift and go to state 30

    expression                     shift and go to state 64

state 35
